# Math630-codes

./: LICENSE  README.md
GE_roundoff/: example1.m  example2.m  example3.m
cholesky/: CMakeLists.txt  bwdsub_col.m  bwdsub_row.py  cholesky_ip.m  cholesky_ip.py  cholesky_op.m  cholesky_op.py  driver.cpp  driver.m  driver.py  fwdsub_col.m  fwdsub_row.py
matmat/: CMakeLists.txt  driver.cpp  driver.m  driver.py  matmat_ijk.m  matmat_ijk.py  matmat_ikj.m  matmat_ikj.py  matmat_jik.m  matmat_jik.py  matmat_jki.m  matmat_jki.py  matmat_kij.m  matmat_kij.py  matmat_kji.m  matmat_kji.py
matvec/: CMakeLists.txt  driver.cpp  driver.m  driver.py  matvec_col.m  matvec_col.py  matvec_row.m  matvec_row.py
sp_chol/: diff_2D.m  diff_3D.m  driver.m  driver.py  makeplots.m
sp_lu/: diff_2D.m  diff_3D.m  driver.m  driver.py  makeplots.m
